--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ui-kitten/date-fns": "^4.4.0",
     "@ui-kitten/eva-icons": "^4.4.0",
     "@ui-kitten/moment": "^4.4.0",
+    "d3": "^5.16.0",
     "date-fns": "^1.30.1",
     "expo": "^36.0.2",
     "expo-constants": "^8.0.0",
@@ -53,6 +54,7 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-svg": "9.13.3",
+    "react-native-svg-animations": "^0.2.2",
     "react-native-tab-view": "^2.13.0",
     "react-native-web": "^0.11.7"
   },
@@ -64,7 +66,7 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-expo": "^8.0.0",
     "conventional-changelog-cli": "^2.0.21",
-    "expo-cli": "^3.11.9",
+    "expo-cli": "^3.23.2",
     "husky": "^1.1.2",
     "jetifier": "^1.6.5",
     "rimraf": "^2.6.2",
