--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,4 +7,4 @@ image:
 tasks:
 - before: npm install -g expo-cli
   init: npm install
-  command: expo start --host tunnel
+  # command: expo start --host tunnel
